feat(basic): add style

--- a/sections/basic/index.html
+++ b/sections/basic/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Learning JAMstack</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Hello FE with JAMstack</h1>
-  <p>I learn and write code always...and I enjoy doing so😎!</p>
+  <main>
+    <h1>Hello FE with JAMstack</h1>
+    <p>I learn and write code always...and I enjoy doing so😎!</p>
+  </main>
 </body>
 </html>
